fix gradle